// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fiscalization XML should match with full data 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/">
  <soapenv:Body>
    <tns:RacunZahtjev xmlns:tns="http://www.apis-it.hr/fin/2012/types/f73" Id="uniqid-0123456789abcdef">
      <tns:Zaglavlje>
        <tns:DatumVrijeme>12.01.2021T13:05:30</tns:DatumVrijeme>
        <tns:IdPoruke>uuid-0123456789abcdef</tns:IdPoruke>
      </tns:Zaglavlje>
      <tns:Racun>
        <tns:BrRac>
          <tns:BrOznRac>1</tns:BrOznRac>
          <tns:OznNapUr>1</tns:OznNapUr>
          <tns:OznPosPr>ODV1</tns:OznPosPr>
        </tns:BrRac>
        <tns:DatVrijeme>15.07.2014T18:00:00</tns:DatVrijeme>
        <tns:IznosMarza>32.00</tns:IznosMarza>
        <tns:IznosNePodlOpor>5.10</tns:IznosNePodlOpor>
        <tns:IznosOslobPdv>23.50</tns:IznosOslobPdv>
        <tns:IznosUkupno>456.10</tns:IznosUkupno>
        <tns:NacinPlac>G</tns:NacinPlac>
        <tns:NakDost>false</tns:NakDost>
        <tns:Naknade>
          <tns:Naknada>
            <tns:IznosN>17.80</tns:IznosN>
            <tns:NazivN>Refund1</tns:NazivN>
          </tns:Naknada>
        </tns:Naknade>
        <tns:Oib>32314900695</tns:Oib>
        <tns:OibOper>34562123431</tns:OibOper>
        <tns:OstaliPor>
          <tns:Porez>
            <tns:Naziv>Naziv1</tns:Naziv>
            <tns:Iznos>12.10</tns:Iznos>
            <tns:Osnovica>453.30</tns:Osnovica>
            <tns:Stopa>40.10</tns:Stopa>
          </tns:Porez>
          <tns:Porez>
            <tns:Naziv>Naziv2</tns:Naziv>
            <tns:Iznos>50.10</tns:Iznos>
            <tns:Osnovica>445.10</tns:Osnovica>
            <tns:Stopa>27.10</tns:Stopa>
          </tns:Porez>
        </tns:OstaliPor>
        <tns:OznSlijed>N</tns:OznSlijed>
        <tns:Pdv>
          <tns:Porez>
            <tns:Iznos>20.10</tns:Iznos>
            <tns:Osnovica>400.10</tns:Osnovica>
            <tns:Stopa>25.10</tns:Stopa>
          </tns:Porez>
          <tns:Porez>
            <tns:Iznos>15.44</tns:Iznos>
            <tns:Osnovica>500.10</tns:Osnovica>
            <tns:Stopa>10.10</tns:Stopa>
          </tns:Porez>
        </tns:Pdv>
        <tns:Pnp>
          <tns:Porez>
            <tns:Iznos>10.10</tns:Iznos>
            <tns:Osnovica>100.10</tns:Osnovica>
            <tns:Stopa>30.10</tns:Stopa>
          </tns:Porez>
          <tns:Porez>
            <tns:Iznos>20.10</tns:Iznos>
            <tns:Osnovica>200.10</tns:Osnovica>
            <tns:Stopa>20.10</tns:Stopa>
          </tns:Porez>
        </tns:Pnp>
        <tns:USustPdv>true</tns:USustPdv>
        <tns:ZastKod>2d4398c29f18c1c2fdc3b80b0c166e2e</tns:ZastKod>
      </tns:Racun>
    <Signature xmlns="http://www.w3.org/2000/09/xmldsig#"><SignedInfo><CanonicalizationMethod Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/><SignatureMethod Algorithm="http://www.w3.org/2000/09/xmldsig#rsa-sha1"/><Reference URI="#uniqid-0123456789abcdef"><Transforms><Transform Algorithm="http://www.w3.org/2000/09/xmldsig#enveloped-signature"/><Transform Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/></Transforms><DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1"/><DigestValue>Q1Y0SgKoTQtZnJOz/+pZm01fKWo=</DigestValue></Reference></SignedInfo><SignatureValue>PIOjJYHm2y6gGvOplnK+N7U6fevwFJ7GSePubGzE9lvjqoVMCn3Wm0p370zDzfGDdpm2b2r5w88VNiDmte0z8hcyIBR5gIAvtkxazk8UthegbZ1T0AJKCXrbGtwwLvT6OTtc/Q7qIlRQEKIExYuu5YQS5PldhKEtnsIXyfYkXyk=</SignatureValue><KeyInfo><X509Data><X509Certificate>
MIICczCCAdygAwIBAgIEAPymiTANBgkqhkiG9w0BAQUFADBrMQswCQYDVQQGEwJV
UzEQMA4GA1UECBMHTG90aGlhbjESMBAGA1UEBxMJRWRpbmJ1cmdoMQ0wCwYDVQQK
EwRUZXN0MRgwFgYJKoZIhvcNAQkBFglmcmVkQGhvbWUxDTALBgNVBAMTBGZyZWQw
HhcNMTAwMTA4MTczNzU4WhcNMTIwMTA4MTczNzU4WjBrMQswCQYDVQQGEwJVUzEQ
MA4GA1UECBMHTG90aGlhbjESMBAGA1UEBxMJRWRpbmJ1cmdoMQ0wCwYDVQQKEwRU
ZXN0MRgwFgYJKoZIhvcNAQkBFglmcmVkQGhvbWUxDTALBgNVBAMTBGZyZWQwgZ8w
DQYJKoZIhvcNAQEBBQADgY0AMIGJAoGBALFSdWsBxphxHYTLHM1ETlhHItfK+xsj
mcOZ9YOJHXpsONyzNyxWJZCZSK2dmwGaxqvJEsxGo/vzKvwO5K9sAT5b5xlCJmbu
JA0XKTlLC0YTi+bNLK6db0RDoIfVfMhbW4k1Gpc/vmKWDdRAGR8phwmBQc0CqX+4
K/Vj/CCMD8hpAgMBAAGjJDAiMCAGCWCGSAGG+EIBDAQTFhF3d3cuYWJ5bG9uc29m
dC5kZTANBgkqhkiG9w0BAQUFAAOBgQA4YKdsSWLah3e0Ccpdzsqrjo/QxOvlEyRy
M1n8/Dszfxik1LurcFcM8tTuyKT9aQ2EnV/id8mKx01ldzFAPkWQWU1tappOfZ/2
bHOM8gdmiyHpKCrkkvVR+YJc0x3FuzjuqJP8CkC/WdTJr3YcuLQ6K9QhPO8KIVDs
3BvXsf4F9Q==

</X509Certificate><X509IssuerSerial><X509IssuerName>OU=,O=Test,C=US</X509IssuerName><X509SerialNumber>00fca689</X509SerialNumber></X509IssuerSerial></X509Data></KeyInfo></Signature></tns:RacunZahtjev>
  </soapenv:Body>
</soapenv:Envelope>"
`;

exports[`Fiscalization XML should match with partial data 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/">
  <soapenv:Body>
    <tns:RacunZahtjev xmlns:tns="http://www.apis-it.hr/fin/2012/types/f73" Id="uniqid-0123456789abcdef">
      <tns:Zaglavlje>
        <tns:DatumVrijeme>12.01.2021T13:05:30</tns:DatumVrijeme>
        <tns:IdPoruke>uuid-0123456789abcdef</tns:IdPoruke>
      </tns:Zaglavlje>
      <tns:Racun>
        <tns:BrRac>
          <tns:BrOznRac>1</tns:BrOznRac>
          <tns:OznNapUr>1</tns:OznNapUr>
          <tns:OznPosPr>ODV1</tns:OznPosPr>
        </tns:BrRac>
        <tns:DatVrijeme>15.07.2015T20:00:00</tns:DatVrijeme>
        <tns:IznosMarza>32.00</tns:IznosMarza>
        <tns:IznosNePodlOpor>5.10</tns:IznosNePodlOpor>
        <tns:IznosOslobPdv>23.50</tns:IznosOslobPdv>
        <tns:IznosUkupno>456.10</tns:IznosUkupno>
        <tns:NacinPlac>G</tns:NacinPlac>
        <tns:NakDost>true</tns:NakDost>
        <tns:Naknade/>
        <tns:Oib>32314900695</tns:Oib>
        <tns:OibOper>34562123431</tns:OibOper>
        <tns:OstaliPor/>
        <tns:OznSlijed>N</tns:OznSlijed>
        <tns:Pdv/>
        <tns:Pnp/>
        <tns:USustPdv>false</tns:USustPdv>
        <tns:ZastKod>c8236f0084baaf67cae8c58df0e1bcd6</tns:ZastKod>
      </tns:Racun>
    <Signature xmlns="http://www.w3.org/2000/09/xmldsig#"><SignedInfo><CanonicalizationMethod Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/><SignatureMethod Algorithm="http://www.w3.org/2000/09/xmldsig#rsa-sha1"/><Reference URI="#uniqid-0123456789abcdef"><Transforms><Transform Algorithm="http://www.w3.org/2000/09/xmldsig#enveloped-signature"/><Transform Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/></Transforms><DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1"/><DigestValue>1HzEeDmo4qQWMWkMsFmpY8oJAPw=</DigestValue></Reference></SignedInfo><SignatureValue>gMDMf17+AyJXSi0HYK7WU3IdU2N6pcMebuBI4LyZLcYxIeQP8Bn9XNdp7EWlY30z0Cj2lg7BJ/WJ9cvrZ5GT7XrXnAyUrGtAHKu4itKGZOpliuONT7s4NiA9EG82CU6SMprByxXqmIjzi2wuNSnYFeprMUtrC62hn5OwVpDprWA=</SignatureValue><KeyInfo><X509Data><X509Certificate>
MIICczCCAdygAwIBAgIEAPymiTANBgkqhkiG9w0BAQUFADBrMQswCQYDVQQGEwJV
UzEQMA4GA1UECBMHTG90aGlhbjESMBAGA1UEBxMJRWRpbmJ1cmdoMQ0wCwYDVQQK
EwRUZXN0MRgwFgYJKoZIhvcNAQkBFglmcmVkQGhvbWUxDTALBgNVBAMTBGZyZWQw
HhcNMTAwMTA4MTczNzU4WhcNMTIwMTA4MTczNzU4WjBrMQswCQYDVQQGEwJVUzEQ
MA4GA1UECBMHTG90aGlhbjESMBAGA1UEBxMJRWRpbmJ1cmdoMQ0wCwYDVQQKEwRU
ZXN0MRgwFgYJKoZIhvcNAQkBFglmcmVkQGhvbWUxDTALBgNVBAMTBGZyZWQwgZ8w
DQYJKoZIhvcNAQEBBQADgY0AMIGJAoGBALFSdWsBxphxHYTLHM1ETlhHItfK+xsj
mcOZ9YOJHXpsONyzNyxWJZCZSK2dmwGaxqvJEsxGo/vzKvwO5K9sAT5b5xlCJmbu
JA0XKTlLC0YTi+bNLK6db0RDoIfVfMhbW4k1Gpc/vmKWDdRAGR8phwmBQc0CqX+4
K/Vj/CCMD8hpAgMBAAGjJDAiMCAGCWCGSAGG+EIBDAQTFhF3d3cuYWJ5bG9uc29m
dC5kZTANBgkqhkiG9w0BAQUFAAOBgQA4YKdsSWLah3e0Ccpdzsqrjo/QxOvlEyRy
M1n8/Dszfxik1LurcFcM8tTuyKT9aQ2EnV/id8mKx01ldzFAPkWQWU1tappOfZ/2
bHOM8gdmiyHpKCrkkvVR+YJc0x3FuzjuqJP8CkC/WdTJr3YcuLQ6K9QhPO8KIVDs
3BvXsf4F9Q==

</X509Certificate><X509IssuerSerial><X509IssuerName>OU=,O=Test,C=US</X509IssuerName><X509SerialNumber>00fca689</X509SerialNumber></X509IssuerSerial></X509Data></KeyInfo></Signature></tns:RacunZahtjev>
  </soapenv:Body>
</soapenv:Envelope>"
`;
